--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.0
-opencensus-ext-azure==1.0.4
+Flask==2.0.1
+opencensus-ext-azure
 opencensus-ext-flask
 redis==3.5.3
-opencensus==0.7.13
-opencensus-ext-logging==0.1.0
+opencensus
+opencensus-ext-logging
